fix menu error w/ positioning + z-index

--- a/src/styles/stylus/screen.menu.styl
+++ b/src/styles/stylus/screen.menu.styl
@@ -1,10 +1,13 @@
+// NOTE: increase specificity on this
 .menu-screen
   background: #262626;
   font-size: .9rem;
+  height: 90% !important;
   padding: 1rem !important;
   padding-top: 0 !important;
-  position: fixed;
+  position: fixed !important;
   width: 70px !important;
+  z-index: 20 !important;
   h3
     color: #eee;
     text-align: center;
