--- a/src/styles/stylus/screen.resources.styl
+++ b/src/styles/stylus/screen.resources.styl
@@ -6,6 +6,7 @@
   //background: linear-gradient(to bottom, #eee, lighten($green, 30%)) !important;
   background: #333;
   border-top: 4px solid $green;
+  margin-left: 70px;
   h2 {
     background: darken($green, 10%);
     color: #eee;
